backend/commande-service/commande-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commande-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commande
  template:
    metadata:
      labels:
        app: commande
    spec:
      containers:
      - name: commande-container
        image: imadoualid/commande:1
        imagePullPolicy: Always
