backend/commande-service/commande-service.yml
apiVersion: v1
kind: Service
metadata:
  name: commande-service
spec:
  ports:
  - name: http
    targetPort: 8083
    port: 80
  selector:
    app: commande
