backend/commande-service/commande-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: commande-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: commande.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: commande-service
          servicePort: http
